common-applications/test-environment/nestos/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nestos-deployment
  namespace: nestos
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: nestos
  template:
    metadata:
      labels:
        app: nestos
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
      - name: nestos
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/nestos-website-test:0b12381abff528522761d1f9926e5315349dbe4f
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 200m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 100Mi
