common-applications/test-environment/nestos/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: nestos-ingress
  namespace: nestos
spec:
  tls:
    - hosts:
      - nestos.test.osinfra.cn
      secretName: nestos-tls
  rules:
    - host: nestos.test.osinfra.cn
      http:
        paths:
        - backend:
            serviceName: nestos-service
            servicePort: 80
          path: /
